Selection Highlighting (Outline Selected) not working in complex scene #77315

Closed
opened 2020-06-03 19:58:26 +02:00 by Marcus Papathoma · 8 comments

Edit by @Alaska
Bisecting points to a1f9eebc0b as the cause.


System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-02 22:21, hash: 2e52b3206c
Worked: 2.83.0

Short description of error
The outline of a selected object is not shown.

Exact steps for others to reproduce the error

  1. Create a new scene.
  2. Give the default cube a sub-division surface modifier with a high setting (I used 5).
  3. Apply the modifier.
  4. Select everything in the scene and duplicate it a bunch of times.
  5. At a certain point (roughly 500 objects or more), some of the "cubes" will not produce a outline when selected.

Original steps:

Open a blender sample file like the tree creature. (Can be downloaded from here: https://www.blender.org/download/demo-files/)
Try to select something. Make sure that "Show Overlays" and "Outline Selected" is on.
No outline is drawn around the selected object.
Isolate the selected object with "/". The object is shown with an outline.

I made two screenshots from my project one with blender 2.90 alpha where the selected object is not highlighted
Selection_highlight_bug_blender_290.jpg
and one with blender 2.83 where the selection outline works.
Selection_highlight_bug_blender_283.jpg

Edit by @Alaska Bisecting points to a1f9eebc0b as the cause. --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-02 22:21, hash: `2e52b3206c` Worked: 2.83.0 **Short description of error** The outline of a selected object is not shown. **Exact steps for others to reproduce the error** 1. Create a new scene. 2. Give the default cube a sub-division surface modifier with a high setting (I used 5). 3. Apply the modifier. 4. Select everything in the scene and duplicate it a bunch of times. 5. At a certain point (roughly 500 objects or more), **some** of the "cubes" will not produce a outline when selected. --- Original steps: Open a blender sample file like the tree creature. (Can be downloaded from here: https://www.blender.org/download/demo-files/) Try to select something. Make sure that "Show Overlays" and "Outline Selected" is on. No outline is drawn around the selected object. Isolate the selected object with "/". The object is shown with an outline. I made two screenshots from my project one with blender 2.90 alpha where the selected object is not highlighted ![Selection_highlight_bug_blender_290.jpg](https://archive.blender.org/developer/F8574700/Selection_highlight_bug_blender_290.jpg) and one with blender 2.83 where the selection outline works. ![Selection_highlight_bug_blender_283.jpg](https://archive.blender.org/developer/F8574704/Selection_highlight_bug_blender_283.jpg)

Added subscriber: @machieb

Added subscriber: @machieb
Marcus Papathoma changed title from Selection Highlighing (Outline Selected) not working in complex scene to Selection Highlighting (Outline Selected) not working in complex scene 2020-06-03 19:58:46 +02:00
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I am able to reproduce the issue on Linux with Blender 2.90.0 b94ab93dfb (2020-06-03 18:45) and 2.90.0 )e723ec04fb (2020-06-04 03:23using the tree creature file.

I believe I have also found steps to reproduce this issue from scratch. However, Blender keeps frequently when I try to do this so I'm not sure if the steps I list are actually capable of reproducing the issue.

  1. Create a new scene.
  2. Give the default cube a sub-division surface modifier with a high setting (I used 5).
  3. Apply the modifer.
  4. Select everything in the scene and duplicate it a bunch of times.
  5. At a certain point (roughly 500 objects in an initial test), selecting one of the "cubes" will not produce a outline.

I will add this information to the description of the task. I will also attempt to bisect the cause, may take a while.

I am able to reproduce the issue on Linux with Blender 2.90.0 `b94ab93dfb` (2020-06-03 18:45) and 2.90.0 )`e723ec04fb` (2020-06-04 03:23using the tree creature file. I believe I have also found steps to reproduce this issue from scratch. However, Blender keeps frequently when I try to do this so I'm not sure if the steps I list are actually capable of reproducing the issue. 1. Create a new scene. 2. Give the default cube a sub-division surface modifier with a high setting (I used 5). 3. Apply the modifer. 4. Select everything in the scene and duplicate it a bunch of times. 5. At a certain point (roughly 500 objects in an initial test), selecting one of the "cubes" will not produce a outline. I will add this information to the description of the task. I will also attempt to bisect the cause, may take a while.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

CC @fclem bisecting Blender points to a1f9eebc0b as being the cause. Mind taking a look?

CC @fclem bisecting Blender points to a1f9eebc0b as being the cause. Mind taking a look?

This issue was referenced by 0f32029522

This issue was referenced by 0f320295228505b1b66c543c71f75ed828cfd87e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-04 12:57:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77315
No description provided.