Fix T77315 Overlay: Selection Highlighting not working with complex scene

Was caused by a UBO bind to the wrong slot.